# syoch-robotics

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  cz.yaml  flake.nix  git-conventional-commits.yaml  requirements.txt  syoch-roboticsConfig.cmake.in
libs/: CMakeLists.txt  README.md
libs/MyLib/: CMakeLists.txt
libs/MyLib/include/MyLib/: MyLib.hpp
libs/MyLib/src/: lib.cpp
libs/avr/: library.properties
libs/avr/src/: robotics
libs/binary/: CMakeLists.txt
libs/binary/context-detector/: CMakeLists.txt
libs/binary/isr-allocator/: CMakeLists.txt
libs/binary/isr-allocator/source/: isr-allocator.cpp
libs/binary/linked-allocator/: CMakeLists.txt
libs/binary/linked-allocator/libc-override/: override.cpp
libs/binary/linked-allocator/source/: config.h  linked-allocator.cpp  mbed-init.cpp
libs/binary/rd16/: CMakeLists.txt
libs/binary/rd16/include/: rd16.hpp
libs/binary/temp-buffer/: CMakeLists.txt
libs/binary/temp-buffer/source/: temp_buffer.cpp
libs/cmake/: FindFutaba_Puropo.cmake  FindIkakoRobomas.cmake  FindMotorController.cmake  FindPS4_RX.cmake  Findcan_servo.cmake  FindikakoMDC.cmake  Findikako_rohm_md.cmake  FindikarashiCAN_mk2.cmake  Findim920_rs.cmake  Findmbed-ce.cmake  Findsrobo_base.cmake  MbedCE-Toolchain.cmake  MbedCE.cmake
libs/common/: CMakeLists.txt
libs/common/include/robotics/assembly/: motor_pair.hpp
libs/common/include/robotics/controller/: action.hpp  angle_joystick.hpp  boolean.hpp  controller_base.hpp  encoder.hpp  float.hpp  joystick.hpp  packet.hpp  pid.hpp  swerve.hpp
libs/common/include/robotics/experimental/: scheduler.hpp
libs/common/include/robotics/filter/: angle_clamper.hpp  angle_smoother.hpp  angled_motor.hpp  inc_angled_motor.hpp  joystick2angle.hpp  muxer.hpp  pid.hpp
libs/common/include/robotics/network/: block_stream.hpp  can_base.hpp  can_muxer.hpp  iuart.hpp  (+3 more)
libs/common/robotics/controller/: action.hpp  angle_joystick.hpp  boolean.hpp  controller_base.hpp  packet.hpp  swerve.hpp
libs/common/robotics/experimental/: scheduler.hpp
libs/common/robotics/logger/: char_logger.cpp  char_logger.hpp  generic_logger.cpp  generic_logger.hpp  logger-core.cpp  logger-core.hpp  logger.cpp  logger.hpp
libs/common/robotics/network/: can_base.hpp  can_module.cpp  can_module.hpp  dcan.cpp  dcan.hpp  fep_raw_driver.cpp  fep_raw_driver.hpp  fep_tx_state.hpp  rep.cpp  rep.hpp  ssp.hpp  stream.hpp
libs/common/robotics/node/: BD621x.cpp  BD621x.hpp  BD621xFull.cpp  BD621xFull.hpp  BLDC.cpp  BLDC.hpp  digital_out.hpp  node.cpp  node.hpp  node_inspector.cpp  node_inspector.hpp
libs/common/robotics/platform/: dout.hpp  dout.idf.hpp  dout.mbed.hpp  panic.cpp  panic.hpp  pwm.hpp  pwm.idf.hpp  pwm.mbed.hpp  pwm.mock.hpp  random.cpp  random.hpp  random.mbed.cpp  random.mbed.hpp  random.mock.hpp  spi.hpp  spi.idf.hpp  thread.cpp  thread.hpp  thread.mbed.cpp  thread.mbed.hpp  thread.mock.hpp  timer.cpp  timer.hpp  timer.idf.hpp  timer.mbed.hpp  timer.mock.hpp
libs/common/robotics/registry/: ikako_c620.registry.cpp  ikako_mdc.cpp
libs/common/robotics/types/: angle_joystick_2d.cpp  joystick_2d.hpp  pid_gains.cpp  result.hpp
libs/common/robotics/utils/: neopixel.cpp  neopixel.hpp  neopixel_driver.cpp  no_mutex_lifo.hpp  watcher.hpp
libs/common/source/network/: can_base.cpp
libs/common/source/node/: node.cpp
libs/common/source/platform/: panic.cpp
libs/common/source/types/: angle_joystick_2d.cpp  joystick_2d.cpp  pid_gains.cpp
libs/common/src/platform/: panic.cpp
libs/common/src/types/: pid_gains.cpp
libs/drivers/: CMakeLists.txt
libs/drivers/bd621x/: CMakeLists.txt
libs/drivers/bd621x/source/: BD621x.cpp  BD621xFull.cpp
libs/drivers/bldc/: CMakeLists.txt
libs/drivers/bldc/source/: BLDC.cpp
libs/drivers/gpio/: CMakeLists.txt
libs/drivers/ikako_mdc/: CMakeLists.txt
libs/drivers/ikako_mdc/source/: ikako_mdc.cpp
libs/drivers/ikako_robomas/: CMakeLists.txt
libs/drivers/neopixel/: CMakeLists.txt  neopixel.cpp  neopixel_driver.cpp  neopixel_driver.hpp
libs/drivers/neopixel/source/: neopixel.cpp  neopixel_driver.cpp
libs/espidf/: CMakeLists.txt
libs/espidf/idf-robotics/: can_driver.hpp  neopixel_rmt.hpp
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: chained_log_sink.hpp  generic_logger.hpp  implement.hpp  level.hpp  log_line.hpp  log_sink.hpp  logger-core.hpp  logger.hpp
libs/logger/source/: char_logger.cpp  generic_logger.cpp  log_sink.cpp  logger-core.cpp  logger.cpp
libs/logger/src/: generic_logger.cpp  log_sink.cpp  logger-core.cpp
libs/mbed/: CMakeLists.txt  bno055.lib  ikako_c620.lib  robotics
libs/mbed/mbed-robotics/: IkakoRobomas.hpp  ikakoMDC.hpp  ikako_c620.hpp  ikako_c620.registry.cpp  ikako_mdc.cpp  ikako_mdc.hpp  ikakorobomas_node.hpp  simple_can.cpp  uart_stream.hpp
libs/mbed/target_detector/: CMakeLists.txt
libs/mbed/temp/: pseudo_abs_encoder.hpp
libs/network/: CMakeLists.txt
libs/network/dcan/: CMakeLists.txt
libs/network/dcan/source/: can_module.cpp  dcan.cpp
libs/network/fep/: CMakeLists.txt
libs/network/fep/source/: fep_raw_driver.cpp
libs/network/froute/: CMakeLists.txt
libs/network/idf-simple-can/: CMakeLists.txt
libs/network/mbed-simple-can/: CMakeLists.txt
libs/network/mbed-simple-can/source/: simple_can.cpp
libs/network/mbed-uart/: CMakeLists.txt
libs/network/mbed-uart/source/: uart_stream.cpp
libs/network/rd16/: CMakeLists.txt
libs/network/rd16/include/: rd16.hpp
libs/network/rep/: CMakeLists.txt
libs/network/rep/include/: checksum.hpp  rep.hpp
libs/network/rep/source/: rep.cpp
libs/network/simple-can/: CMakeLists.txt
libs/network/ssp/: CMakeLists.txt
libs/network/sync-stream/: CMakeLists.txt
libs/random/: CMakeLists.txt
libs/random/source/: random.cpp  random.idf.hpp  random.mbed.hpp  random.mock.hpp
libs/thread/: CMakeLists.txt
libs/thread/source/: thread.cpp  thread.host.hpp  thread.mbed.hpp
libs/timer/: CMakeLists.txt
libs/timer/source/: timer.cpp  timer.idf.hpp  timer.mbed.hpp  timer.mock.hpp
src/90-f4m-mybin/: CMakeLists.txt
src/90-f4m-mybin/src/: main.cpp
(+145 files in other folders)
