if ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "Mbed")
  add_compile_definitions(__MBED__)
  set(SYOCH_ROBOTICS_DEPENDENCIES Nano::NanoHW_MbedIF)
  set(SROBO_NETWORK_PROVIDED ON CACHE BOOL "Network Availability" FORCE)
  set(SROBO_TIMER_PROVIDED ON CACHE BOOL "Timer Availability" FORCE)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "ESP")
  add_compile_definitions(ESP_PLATFORM)

  set(SYOCH_ROBOTICS_DEPENDENCIES __idf_driver __idf_freertos __idf_esp_timer)
  list(APPEND COMPONENTS driver freertos esp_timer)
  set(SROBO_NETWORK_PROVIDED ON CACHE BOOL "Network Availablity" FORCE)
  set(SROBO_TIMER_PROVIDED ON CACHE BOOL "Timer Availablity" FORCE)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "STM32 HAL")
  add_compile_definitions(__STM32__ __HAL__)
  set(SYOCH_ROBOTICS_DEPENDENCIES "")
  set(SROBO_NETWORK_PROVIDED OFF CACHE BOOL "Network Availablity" FORCE)
  set(SROBO_TIMER_PROVIDED OFF CACHE BOOL "Timer Availablity" FORCE)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "Emulation")
  add_compile_definitions(__EMULATION__)
  set(SYOCH_ROBOTICS_DEPENDENCIES "")
  set(SROBO_NETWORK_PROVIDED ON CACHE BOOL "Network Availablity" FORCE)
  set(SROBO_TIMER_PROVIDED ON CACHE BOOL "Timer Availablity" FORCE)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "Host")
  add_compile_definitions(__HOST__)
  set(SYOCH_ROBOTICS_DEPENDENCIES "")
  set(SROBO_NETWORK_PROVIDED ON CACHE BOOL "Network Availablity" FORCE)
  set(SROBO_TIMER_PROVIDED ON CACHE BOOL "Timer Availablity" FORCE)
else()
  message(FATAL_ERROR "Unknown SYOCH_ROBOTICS_TARGET: ${SYOCH_ROBOTICS_TARGET}")
endif()



add_subdirectory(common)
add_subdirectory(binary)
add_subdirectory(logger)
add_subdirectory(random)
add_subdirectory(drivers)
add_subdirectory(thread)

if ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "Mbed")
  add_subdirectory(mbed)
endif()

if (${SROBO_NETWORK_PROVIDED})
  add_subdirectory(network)
endif()
if (${SROBO_TIMER_PROVIDED})
  add_subdirectory(timer)
endif()