add_library(gpio INTERFACE)
srobo1_target(gpio drivers)

target_link_libraries(gpio INTERFACE ${SYOCH_ROBOTICS_DEPENDENCIES})

if ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "Mbed")
  set(SYOCH_ROBOTICS_DRIVER_GPIO ON)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "ESP")
  set(SYOCH_ROBOTICS_DRIVER_GPIO ON)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "STM32 HAL")
  set(SYOCH_ROBOTICS_DRIVER_GPIO OFF)
elseif ("${SYOCH_ROBOTICS_TARGET}" STREQUAL "Emulation")
  set(SYOCH_ROBOTICS_DRIVER_GPIO OFF)
else()
  message(FATAL_ERROR "Unknown SYOCH_ROBOTICS_TARGET: ${SYOCH_ROBOTICS_TARGET}")
endif()